Summary of important user-visible changes for communications 1.1.1:
-------------------------------------------------------------------

 ** The function `reedmullerdec' had a bug fix introduced on the
    previous release

 ** The function `huffmandeco' has been rewritten and made more
    efficient and should perform faster

 ** Use of deprecated functions has been removed

 ** Package is no longer automatically loaded.
